Video Sequencer rewrite *.png to _.png #46091

Closed
opened 2015-09-13 04:49:19 +02:00 by Dennis · 6 comments

System Information
Linux 4.1.6-1-ARCH #1 SMP PREEMPT + GTX 960

Blender Version
blender-2.76-testbuild2-linux-glibc211-x86_64
Splashscreen Hash: a2a0e7a

Short description of error
If you try to import an image sequence into the video sequencer with *.png the filename will be replaced with _.png and nothing get selected.
In every Blender version till now you could use the Asterisk to select a complete image sequence.

Exact steps for others to reproduce the error
Try to import an image sequence in the video editor with Asterisk

**System Information** Linux 4.1.6-1-ARCH #1 SMP PREEMPT + GTX 960 **Blender Version** blender-2.76-testbuild2-linux-glibc211-x86_64 Splashscreen Hash: a2a0e7a **Short description of error** If you try to import an image sequence into the video sequencer with *.png the filename will be replaced with _.png and nothing get selected. In every Blender version till now you could use the Asterisk to select a complete image sequence. **Exact steps for others to reproduce the error** Try to import an image sequence in the video editor with Asterisk
Author

Changed status to: 'Open'

Changed status to: 'Open'
Dennis self-assigned this 2015-09-13 04:49:19 +02:00
Author

Added subscriber: @Engys

Added subscriber: @Engys

Added subscriber: @mont29

Added subscriber: @mont29
Dennis was unassigned by Bastien Montagne 2015-09-13 08:08:46 +02:00
Bastien Montagne self-assigned this 2015-09-13 08:08:46 +02:00

Ack, that would be my fault… Didn’t know about that feature when opening image sequences - and since using asterisk in filename when writing is really bad, made filebrowser's name field to automatically 'correct' bad chars there. This is not a good idea in read mode though.

Ack, that would be my fault… Didn’t know about that feature when opening image sequences - and since using asterisk in filename when writing is really bad, made filebrowser's name field to automatically 'correct' bad chars there. This is not a good idea in read mode though.

This issue was referenced by 45a875fec4

This issue was referenced by 45a875fec4c00ccf87c5605d85f004f6dd4be8a0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46091
No description provided.