Fix T46091: Video Sequencer rewrite *.png to _.png

Own mistake when adding filename safety check...